@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2004/04/21 21:26:26 minskim Exp $
+$NetBSD: distinfo,v 1.5 2004/04/24 15:44:19 minskim Exp $
 
-SHA1 (mathomatic-11.0c/mathomatic-11.0c.tgz) = fe185a11f030c93f3739e5913c95598db95a1f7e
-Size (mathomatic-11.0c/mathomatic-11.0c.tgz) = 109973 bytes
+SHA1 (mathomatic-11.0d/mathomatic-11.0d.tgz) = 1e5c5530d5d72824e41e33e0f93800e446dc5818
+Size (mathomatic-11.0d/mathomatic-11.0d.tgz) = 109833 bytes
 SHA1 (patch-aa) = b5b1336df22a9381c3d748e4e49f0429ca773c47
